Top-Bar fixes
It‘s still messed up, but looks quite okay now.

--- a/css/rispen.less
+++ b/css/rispen.less
@@ -163,6 +163,7 @@ input[type=text], textarea {
     line-height: 10pt;
     padding: 0 5px;
     margin: 0 5px;
+    .box-shadow(inset 0 0 5px rgba(0,0,0,.15));
   }
 }
 textarea {
@@ -179,54 +180,63 @@ textarea {
 // Topbar 
 
 header {
-  font-family: 'Droid Sans Mono', sans-serif;
-  height: 60px;
-  padding: 50px 0 20px 0;
-  #gradient > .vertical(rgb(50,50,50),rgb(25,25,25));
+  background: @baseColor;
   border-top: 10px solid @darkGrey;
   border-bottom: 1px solid rgba(0,0,0,.2);
-  background: @baseColor;
-  color: rgb(220,220,220);
-  font-size: 10pt;
-  #home {
-    overflow: hidden;
-    width: 136px;
-    height: 55px;
-    margin-right: 20px;
-    background: url(../images/h1-logo.png) no-repeat;
-    a {
-      display: block;
-      line-height: 99999px;
-    }
-  }
-  #stats {
-    color: rgb(255,255,255);
-    .text-shadow(1px 1px 1px rgba(0,0,0,.5));
-    &:before {
-      content: url(../images/analytics.png);
-    }
-    #stats-pomodoros {
-      background: url(../images/stats-pomodoros.png) left no-repeat;
-      padding-left: 25px;
-      margin: 0 5px;
-    }
-    #stats-breaks {
-      background: url(../images/stats-breaks.png) left no-repeat;
-      padding-left: 25px;
-      margin: 0 5px;
-    }
-  }
-  ul  {
+  font-size: 11pt;
+  ul {
     .container;
+    padding: 40px 0 20px 0;
+    color: rgb(255,255,255);
+    .text-shadow;
     li {
       display: inline-block;
-      height: 40px;
-      line-height: 40px;
+      height: 55px;
+      line-height: 55px;
       vertical-align: middle;
+    }
+    #home {
+      width: 136px;
+      margin-right: 44px;
+      background: url(../images/h1-logo.png);
+      margin: 0 40px 0 0;
+      a {
+        display: block;
+        line-height: 999999pt;
+      }
+    }
+    #stats {
+      width: 400px;
+      &:before {
+        content: url(../images/analytics.png);
+      }
+    }
+    #url {
+      width: 310px;
+      text-align: right;
+    }
+    dl {
+      display: inline;
+      border: 0;
+      padding: 0;
+      dt, dd {
+        display: inline-block;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        
+      }
+      dt {
+        font-weight: bold;
+        margin-right: 10px;
+      }
+      dd {
+        margin-right: 10px;
+      }
     }
   }
 }
-#settings {
+#url {
   float: right;
 }
 
